# csv-to-xlsx-conversor

./: .gitignore  404.html  README.md  appveyor.yml  config.toml  gtk_interface.py  index.html  main-cli.py  main.py  mkdocs.yml  modulos_csv.py  modulos_xlsx.py  pyproject.toml  read_csv.py  requirements.txt
app/: functions_structure.py  main.py
app/conversor/: modulos_csv.py  modulos_xlsx.py
conversor/: class_data_csv.py  class_data_xlsx.py  classes_configuration_file.py  config.toml  config_file_data.py  functions_configuration_file.py  modulos_csv.py  modulos_xlsx.py
docs/: index.md  uso-software.md  uso-sofware.md
docs/projeto/: files_conversor.md  files_window.md  index.md
projeto/: index.html
projeto/files_conversor/: index.html
projeto/files_window/: index.html
projeto/módulos_conversor/: index.html
projeto/módulos_conversor/class_data_csv/: index.html
projeto/módulos_conversor/class_data_xlsx/: index.html
projeto/módulos_window/files_window/: index.html
search/: search_index.json
uso-software/: index.html
uso_software/: index.html
