[tool.poetry]
name = "csv to xlsx"
version = "0.1.0"
description = ""
authors = ["Jonas Lima <jonas.lima.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
xlsxwriter = "^3.2.0"
flet = "^0.24.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"
pillow = "^11.0.0"
mkdocs = "^1.6.1"
pymdown-extensions = "^10.12"
mkdocs-material = "^9.5.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
